--- a/Misc/Toasts.Forms.Plugin.nuspec
+++ b/Misc/Toasts.Forms.Plugin.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Toasts.Forms.Plugin</id>
-    <version>3.3.2</version>
+    <version>3.3.2-appsolu1</version>
     <title>Toast Notification Plugin for Xamarin and Windows</title>
     <authors>Egor Bogatov</authors>
     <owners>Egor Bogatov</owners>
@@ -26,30 +26,31 @@
         - Bug fix: ConcurrentDictionaries to avoid multi-threading issues
    </releaseNotes>
     <dependencies>      
-      <group targetFramework=".NETStandard1.1">
+      <group targetFramework=".NETStandard2.0">
       </group>
       <group targetFramework="MonoAndroid10">
-        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="[23.3.0]" />
+        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="[27.0.2.1]" />
       </group>
       <group targetFramework="MonoAndroid70">
-        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" />
+        <dependency id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2.1" />
       </group>
       <group targetFramework="Xamarin.iOS10">
       </group>
-      <group targetFramework="uap10.0">
-      </group>
+      <!--<group targetFramework="uap10.0">
+      </group> -->
     </dependencies>
   </metadata>
   <files>
     <!--Core-->
-    <file src="..\Toasts.Forms.Plugin.Abstractions\bin\Release\netstandard1.1\Toasts.Forms.Plugin.Abstractions.dll" target="lib\netstandard1.1" />
-    <file src="..\Toasts.Forms.Plugin.Abstractions\bin\Release\netstandard1.1\Toasts.Forms.Plugin.Abstractions.pdb" target="lib\netstandard1.1" />
+    <file src="..\Toasts.Forms.Plugin.Abstractions\bin\Release\netstandard2.0\Toasts.Forms.Plugin.Abstractions.dll" target="lib\netstandard2.0" />
+    <file src="..\Toasts.Forms.Plugin.Abstractions\bin\Release\netstandard2.0\Toasts.Forms.Plugin.Abstractions.pdb" target="lib\netstandard2.0" />
     
-    <!--UWP-->
+    <!--UWP
     <file src="..\Toasts.Forms.Plugin.UWP\bin\Release\Toasts.Forms.Plugin.UWP.dll" target="lib\uap10.0" />
     <file src="..\Toasts.Forms.Plugin.UWP\bin\Release\Toasts.Forms.Plugin.UWP.pdb" target="lib\uap10.0" />
     <file src="..\Toasts.Forms.Plugin.UWP\bin\Release\Toasts.Forms.Plugin.Abstractions.dll" target="lib\uap10.0" />
     <file src="..\Toasts.Forms.Plugin.UWP\bin\Release\Toasts.Forms.Plugin.Abstractions.pdb" target="lib\uap10.0" />
+	-->
 
     <!--Xamarin.Android-->
     <file src="..\Toasts.Forms.Plugin.Droid\bin\Release\Toasts.Forms.Plugin.Droid.dll" target="lib\MonoAndroid10" />
